Details
-
Bug
-
Status: Closed (View Workflow)
-
Minor
-
Resolution: Fixed
-
10.5(EOL), 10.6(EOL)
-
None
Description
There are several functions in Innodb to write log flush up to highest current lsn.
It needs to be cleaned up, we already have log_buffer_flush_to_disk() function.
Also, our unconventional use of LSN_MAX as parameter to log_write_up_to(), for special purpose of writing/flushing up to highest current lsn, confused at least one Oracle MySQL developer, who claimed finding a bug, after adding incorrect assertion to the code.