MDEV-26166  replace log_write_up_to(LSN_MAX,...) with log_buffer_flush_to_disk()

Also, remove comparison lsn > flush/write lsn, prior to calling
log_write_up_to. The checks and early returns are part of this function.