storage/innobase/row/row0mysql.cc
@@ -2989,13 +2989,13 @@ row_discard_tablespace_end(
 	}
 
 	DBUG_EXECUTE_IF("ib_discard_before_commit_crash",
-			log_write_up_to(LSN_MAX, true);
+			log_buffer_flush_to_disk();
 			DBUG_SUICIDE(););
 
 	trx_commit_for_mysql(trx);
 
 	DBUG_EXECUTE_IF("ib_discard_after_commit_crash",
-			log_write_up_to(LSN_MAX, true);
+			log_buffer_flush_to_disk();
 			DBUG_SUICIDE(););
 
 	row_mysql_unlock_data_dictionary(trx);
